# order_api

./: .env.example  Dockerfile  README.md  __main__.py  alembic.ini  config.py  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: __init__.py
app/db/migrations/: env.py
app/db/migrations/versions/: 66cb7409f278_add_tables.py  f44be2fc2387_add_orders_and_products.py
app/db/models/: base.py  order.py  product.py
app/db/requests/: order.py  product.py
app/routers/: order.py  product.py
app/schemas/: order.py  product.py
